--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "catalyst-starter",
+  "name": "mood-journal",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,18 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.2.2",
+    "@clerk/themes": "^2.1.10",
+    "@headlessui/react": "^2.1.1",
+    "@heroicons/react": "^2.1.3",
+    "@prisma/client": "^5.16.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.2.6",
+    "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.4"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
-    "eslint-config-next": "14.2.4"
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8",
+    "prettier": "^3.3.2",
+    "prettier-plugin-organize-imports": "^3.2.4",
+    "prettier-plugin-tailwindcss": "^0.6.5",
+    "prisma": "^5.16.1",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5"
   }
 }
