--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
     "@clerk/themes": "^2.1.10",
     "@headlessui/react": "^2.1.1",
     "@heroicons/react": "^2.1.3",
+    "@langchain/core": "0.2.16",
+    "@langchain/openai": "^0.2.2",
     "@prisma/client": "^5.16.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.6",
+    "langchain": "0.2.10",
     "next": "14.2.3",
+    "openai": "^4.52.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -34,5 +39,19 @@
     "prisma": "^5.16.1",
     "tailwindcss": "^3.4.4",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": ">=18"
+  },
+  "resolutions": {
+    "@langchain/core": "0.2.16"
+  },
+  "overrides": {
+    "@langchain/core": "0.2.16"
+  },
+  "pnpm": {
+    "overrides": {
+      "@langchain/core": "0.2.16"
+    }
   }
 }
